Edited wiki page KojakOutput through web user interface.

--- a/wiki/KojakOutput.wiki
+++ b/wiki/KojakOutput.wiki
@@ -8,7 +8,7 @@
 
 == Overview ==
 
-Kojak produces two output files: 1) a summarized list of PSMs and scores for all spectra, and 2) an optional list of PSMs formatted for further analysis using [Percolator Percolator]. Both output files are presented in ASCII text and are tab-delimited. They can alternately be opened in most spreadsheet software (such as Microsoft Excel) for easy viewing.
+Kojak produces two types of output files: 1) a summarized list of all spectra results, and 2) a set of PSM summary files formatted for further analysis using [Percolator Percolator]. Both output file types are presented in ASCII text and are tab-delimited. They can alternately be opened in most spreadsheet software (such as Microsoft Excel) for easy viewing.
 
 == Output File Type #1: Kojak PSMs and Scores ==
 
